apollo-router/src/errors/snapshots/apollo_router__errors__test__error_formatting.snap
---
source: apollo-router/src/errors/mod.rs
expression: "SimpleErrorFormatter.to_graphql_error(&error, Default::default(),\n        None).unwrap()"
---
message: Bad request
extensions:
  code: TEST_ERROR__BAD_REQUEST
  level: Error
