apollo-router/src/errors/snapshots/apollo_router__errors__test__structured_formatting_via_context.snap
---
source: apollo-router/src/errors/mod.rs
expression: "context.to_graphql_errors(TestError::BadRequest, Default::default(),\n        None).expect(\"error formatting\")"
---
- message: Bad request
  extensions:
    code: TEST_ERROR__BAD_REQUEST
    level: Error
